maalstroom/templates/dds/style.css
/* THIS IS FILE IN DDS DIRECTORY */
/*
 * @font-face {
 *    font-family: 'ralewaylight';
 *    src: url('raleway-light-webfont.eot');
 *    src: url('raleway-light-webfont.eot?#iefix') format('embedded-opentype'),
 *         url('raleway-light-webfont.woff2') format('woff2'),
 *         url('raleway-light-webfont.woff') format('woff'),
 *         url('raleway-light-webfont.ttf') format('truetype'),
 *         url('raleway-light-webfont.svg#ralewaylight') format('svg');
 *    font-weight: normal;
 *    font-style: normal;
 *
 * }
 */
html { 
	position: relative;
	min-height: 100%;
}
* {
	margin: 0;
	padding: 0;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	-ms-box-sizing: border-box;
	box-sizing: border-box;
}

body#dds {
	font: .8em 'ralewaylight', sans-serif;
	line-height: 1.2em;
	letter-spacing: .03em;
	padding: 0;
	margin: 0 0 0 0;
	overflow-x: hidden;
	background-color: #f3f6f8;
	color: #141c30;
}
h1 {
	font-size: 3em;
	font-weight: 100;
	letter-spacing: .05em;
	line-height:1em;
	margin: 0;
	text-transform: uppercase;
}
h2 {
	font-size: 1.1em;
	font-weight: normal;
	letter-spacing: .07em;
	text-transform: uppercase;
}
h3 {
	font-size: 2em;
	font-weight: 100;
	letter-spacing: .05em;
	line-height:1em;
	margin: 0;
	text-transform: uppercase;
}
p {
	margin: 0 0 6px 0;
}
p:last-child {
	margin-bottom: 0;
}
hr.style1 {
	border-top: 1px solid rgba(0, 0, 0, 0.1);
	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}
hr.style2 {
	height: 6px;
	background: url("morphis://.dds/images/hr-11.png") repeat-x 0 0;
	border: 0;
}
hr.style12 {
	height: 6px;
	background: url("morphis://.dds/images/hr-12.png") repeat-x 0 0;
	border: 0;
}
iframe {
	border: 0;
}
.dds-body-bkg {
	background-color: #edeeee;
}
.dds-wrapper {
}
/*.dds-channel-wrapper {
 * margin: 0 20px 0 20px;
 * } **/
.dds-trunc {
	overflow: hidden;
	text-overflow: ellipsis;
	-o-text-overflow: ellipsis;
	white-space: nowrap;
}



/*********************
dds header
**********************/

.dds-header-wrapper {
	height: 4em;
	background-color: #161a1e;
}
.dds-header-dash-icon {
	background-color: #161a1e;
	width: 9em;
	color: #fff;
	height: 100%;
	float: left;
	font-size: .35em;
	line-height:1.6em;
	text-align: center;
	padding-top: 3em;
	padding-left: 2em;
	-webkit-transition: all 0.10s ease-in-out;
	-moz-transition: all 0.10s ease-in-out;
	transition: all 0.15s ease-in-out;
	display: block;
	margin-left:-10px;
}
.dds-header-dash-icon:hover {
	margin-left: 0px;
	background-color: #3b3e43;
	display: block;
}
.dds-channel-hash {
	color: #3b3e43;
	float: left;
	font-size: 1.5em;
}
.dds-channel-header {
	background-color: #161a1e;
	height: 2em;
}


/**********************
 d *ds status bar
 *********************/

.dds-channel {
	font-weight: bold;
	max-width: 50%;
	display: inline-block;
	vertical-align: top;
}
.dds-username{
	color: #38a3af;
}
.dds-statusbar {
	height: 30px;
	background-color: #371f44;
	color: #fff;
	padding: 7px 20px 7px 20px;
	white-space: nowrap;
}
.dds-statusbar a {
	text-decoration: none;
	font-weight: bold;
}
.dds-statusbar a:link, a:visited {
	color: #38a3af;
}
.dds-statusbar a:hover {
	color: #fff;
}


/***********************
dds reply footer
**********************/

.dds-reply-accesskey-text {
	color: #725880;
	vertical-align: top;
	margin-top: 5px;
	margin-right: 15px;
	font-size: .9em;
	font-style: italic;
	display: inline-block;
}
.dds-reply-top {
	height: 3.5em;
}
.dds-reply-id {
	font-size: 0.75em;
	text-overflow: ellipsis;
	overflow: hidden;
	width: 20%;
	color: #fff;
	white-space: nowrap;
	float: left;
}
.dds-reply-text {
	color: #fff;
	margin: 1em 0 .5em 0;
	float: left;
}
.dds-reply-wrapper {
	position: fixed;
	left: 0;
	bottom: 0;
	height: 165px;
	width: 100%;
	padding: 14px 20px 7px 20px;
	background-color: #371f44;
}
.dds-reply-user-icon {
	float: left;
	height: 55px;
	vertical-align:top;
}
.dds-reply-content {
	padding-left: 6em;
	width: 90%;
}
.dds-reply-input {
}
.dds-message {
}
.dds-text-area-wrapper {
	width: 100%;
}
.dds-message textarea {
	padding:8px;
	width: 100%;
	border: 1px solid #371f44;
	border-radius: 4px;
	font: 11px 'ralewaylight', sans-serif;
}
input[type="text"]:focus, textarea:focus {
	outline: medium none;
	border: 1px solid #39a3af;
	box-shadow: 0px 0px 2px 1px rgba(56, 163, 175, 0.9) inset;
}
.dds-message li {
	white-space: nowrap;
	list-style: none;
}
.dds-message input {
	height:2em;
	width: 90%;
	border: 1px solid #371f44;
	border-radius: 4px;
	padding-left: 10px;
	font: 11px 'ralewaylight', sans-serif;
}
.dds-reply-button-wrapper {
	padding-top: .5em;
	float: right;
}
button.dds-reply-button {
	vertical-align: top;
	background-color: transparent;
	border: 1px solid #fff;
	border-radius: 3px;
	color: #fff;
	padding: 3px 10px;
	text-align: center;
}
button.dds-reply-button:hover {
	background: #38a3af;
	cursor: pointer;
	color: #fff;
}
button.dds-reply-button:active {
	border: 1px solid;
}


/************************
dds post
***********************/

.dds-post-wrapper {
	padding: 7px 20px 7px 20px;
	position: relative;
	height: 100%;
	-webkit-transition: all 0.10s ease-in-out;
	-moz-transition: all 0.10s ease-in-out;
	transition: all 0.15s ease-in-out;
}
.dds-post-wrapper:hover {
	background-color: #fff;
}
.dds-post-content {
	margin-left: 45px;
	line-height: 1.4em;
}
.dds-post-name {
	display: inline-block;
	font-size: 1em;
	max-width: 45%;
	float: left;
	font-weight: bold;
}
.dds-post-title {
	display: inline-block;
	font-weight: 100;
	font-size: 1em;
	color: #141c30;
	text-decoration: none;
	height: 1em;
	float: left;
}
.dds-post-name a {
	color: #141c30;
	text-decoration: none;
}
.dds-post-name a:link {
	color: #141c30;
}
.dds-post-name  a:visited {
	color: #141c30;
}
.dds-post-name a:hover {
	color: #38a3af;
}
.dds-post-time {
	font-size: .9em;
	color: #a2a6ab;
	display: inline-block;
	font-style: italic;
	position: absolute;
}
.dds-post-reply { 
	float: right;
	margin-right: 100px;
}
.dds-post-text { 
	overflow-wrap: break-word;
	word-wrap: break-word;
}
/* ... */

